# Scrapping_Crypto

./: crypto_data.csv  pyproject.toml  reqs
cryptoscraper/: crypto_DATABI.pbix  crypto_scraper_SE.py  crypto_scraper_bs4.py  mail_sender.py  utils.py
