[tool.poetry]
name = "cryptoscraper"
version = "0.1.0"
description = ""
authors = ["Frouzin <matheusereis44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
